# strands-in-5-minutes

./: .env  .env.example  LICENSE  README.md  README_EN.md  app_mcp.py  main.py  main_redbook.py  mcp_server.py  pyproject.toml  requirements.txt  strands_mcp_search.py  strands_search.py
01_first_agent/: first_agent.md  first_agent.py  first_agent_0.md  first_agent_0.py
cookbook/: strands.md
